Add shortcut for mass ops command